patches/paste/pastey-test-suite/tests/ui/extra-token-in-replace.rs
use pastey::paste;

macro_rules! m {
    ($name:ident) => {
        paste! {
            struct [< $name:replace("a", "b", "c") >];
        }
    };
}

m!(Pastey);

fn main() {}
